headerのベース作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,27 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700,900&display=swap" rel="stylesheet">
   </head>
 
   <body>
+    <header class="header">
+      <div class="inner">
+        <a>観光地登録</a>
+        <a>マイページ</a>
+        <a>ログアウト</a>
+        <div class="second-header">
+          <a>北海道、東北</a>
+          <a>関東</a>
+          <a>北陸</a>
+          <a>東海</a>
+          <a>近畿</a>
+          <a>中国</a>
+          <a>四国</a>
+          <a>沖縄、九州</a>
+        </div>
+      </div>
+    </header>
     <%= yield %>
   </body>
 </html>
