bodyのベース作成

--- a/app/views/tabinabi/index.html.erb
+++ b/app/views/tabinabi/index.html.erb
@@ -1,1 +1,123 @@
-<div>これはトップページです</div>
+    <main class="main">
+      <div class="inner">
+        <div class="top">
+
+        <div class="top_screen">
+          <img src="/assets/tabinabitop.jpg" alt="清水寺" class="top_img">
+          <p class="top_name">旅nabi.</p>
+        <div>
+
+        <div class="info">
+          <div class="info__sentens">
+          旅行で行った観光地やお店、旅館などを共有するアプリです<br>
+          旅行の思い出の場所をみんなで共有しましょう！<br>
+          そして新しい旅先が見つかるかも....
+          </div>
+        </div>
+
+        <h1 class="page-heading">観光地一覧</h1>
+        <div class="card__wrapper">
+          <div class="card">
+            <div class="card__body">
+              <h2 class="card__title">清水寺</h2>
+              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
+              <p class="card__summary">
+                タグが入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
+              </p>
+            </div>
+          </div>
+          
+          <div class="card">
+            <div class="card__body">
+              <h2 class="card__title">清水寺</h2>
+              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
+              <p class="card__summary">
+                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card__body">
+              <h2 class="card__title">清水寺</h2>
+              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
+              <p class="card__summary">
+                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card__body">
+              <h2 class="card__title">清水寺</h2>
+              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
+              <p class="card__summary">
+                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card__body">
+              <h2 class="card__title">清水寺</h2>
+              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
+              <p class="card__summary">
+                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card__body">
+              <h2 class="card__title">清水寺</h2>
+              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
+              <p class="card__summary">
+                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card__body">
+              <h2 class="card__title">清水寺</h2>
+              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
+              <p class="card__summary">
+                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card__body">
+              <h2 class="card__title">清水寺</h2>
+              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
+              <p class="card__summary">
+                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card__body">
+              <h2 class="card__title">清水寺</h2>
+              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
+              <p class="card__summary">
+                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card__body">
+              <h2 class="card__title">清水寺</h2>
+              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
+              <p class="card__summary">
+                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
+              </p>
+            </div>
+          </div>
+          
+        </div>
+        <div class="inazuma">最初1234最後</div>
+      </div>
+    </main>
