さぶheaderの作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,21 +13,19 @@
   <body>
     <header class="header">
       <div class="inner">
-        <a>観光地登録</a>
-        <a>マイページ</a>
-        <a>ログアウト</a>
-        <div class="second-header">
-          <a>北海道、東北</a>
-          <a>関東</a>
-          <a>北陸</a>
-          <a>東海</a>
-          <a>近畿</a>
-          <a>中国</a>
-          <a>四国</a>
-          <a>沖縄、九州</a>
+        <div class="main-header">
+          <a class="logo">旅nabi.</a>
+          <a class="btn1">観光地登録</a>
+          <a class="btn2">マイページ</a>
+          <a class="btn2">ログアウト</a>
         </div>
       </div>
     </header>
+    <div class="sub-header">
+      <div class="inner">
+      さぶ
+      </div>
+    </div>
     <%= yield %>
   </body>
 </html>
