--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -1,9 +1,31 @@
 .header {
   background-color: rgb(252, 178, 129);
-  margin-bottom: 48px;
+  margin-bottom: 0;
   padding: 10px 0;
 }
 .inner {
   width: 1024px;
-  margin: 0 auto;
+  margin: 0 auto; 
+}
+
+.logo {
+  color: white;
+  font-size: 35px;
+}
+
+.btn1 {
+  font-size: 20px;
+  margin:0 30px 0 400px;
+}
+
+.btn2 {
+  font-size: 20px;
+  margin: 0 30px;
+}
+
+.sub-header {
+  margin-bottom: 48px;
+  padding: 10px 0;
+  background-color: rgb(252, 178, 129);
+  border-top: red solid 1px;
 }
