--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,16 @@
       </div>
     </header>
     <div class="sub-header">
-      <div class="inner">
-      さぶ
+      <div class="sub-inner">
+      <div class="sub">全国</div>
+      <div class="sub">北海道・東北</div>
+      <div class="sub">関東</div>
+      <div class="sub">北陸</div>
+      <div class="sub">東海</div>
+      <div class="sub">近畿</div>
+      <div class="sub">中国</div>
+      <div class="sub">四国</div>
+      <div class="sub">九州・沖縄</div>
       </div>
     </div>
     <%= yield %>
