ログイン画面のルーティング表示

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
         <div class="main-header">
           <a class="logo">旅nabi.</a>
           <a class="btn1">観光地登録</a>
-          <a class="btn2">マイページ</a>
-          <a class="btn2">ログアウト</a>
+          <a class="btn2"><%= link_to "ログイン", new_user_session_path %></a>
+          <a class="btn2"></a>
         </div>
       </div>
     </header>
