--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
           <a class="logo">旅nabi.</a>
           <a class="btn1">観光地登録</a>
           <a class="btn2"><%= link_to "ログイン", new_user_session_path %></a>
-          <a class="btn2"></a>
+          <a class="btn2"><%= link_to "ユーザー新規", new_user_registration_path %></a>
         </div>
       </div>
     </header>
