--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,13 @@
         <div class="main-header">
           <a class="logo">旅nabi.</a>
           <a class="btn1">観光地登録</a>
-          <a class="btn2"><%= link_to "ログイン", new_user_session_path %></a>
-          <a class="btn2"><%= link_to "ユーザー新規", new_user_registration_path %></a>
+          <% if user_signed_in? %>
+            <a class="btn2"><%= link_to current_user.nickname, "/users/#{current_user.id}" %></a>
+            <a class="btn2"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></a>
+          <% else %>
+            <a class="btn2"><%= link_to "ログイン", new_user_session_path %></a>
+            <a class="btn2"><%= link_to "ユーザー新規", new_user_registration_path %></a>
+          <% end %>
         </div>
       </div>
     </header>
