--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <div class="inner">
         <div class="main-header">
           <a class="logo">旅nabi.</a>
-          <a class="btn1">観光地登録</a>
+          <a class="btn1"><%= link_to "観光地登録", new_spot_path %></a>
           <% if user_signed_in? %>
             <a class="btn2"><%= link_to current_user.nickname, "/users/#{current_user.id}" %></a>
             <a class="btn2"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></a>
