--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -1,1 +1,7 @@
-新規
+
+<%= form_with model: @spot, local: true do |f| %>
+
+<%= f.text_field :name, placeholder: "name" %>
+<%= f.text_area :text, placeholder: "text" %>
+<%= f.submit "SEND" %>
+<% end %>
