--- a/app/views/tabinabi/index.html.erb
+++ b/app/views/tabinabi/index.html.erb
@@ -15,109 +15,22 @@
           </div>
         </div>
 
+        
         <h1 class="page-heading">観光地一覧</h1>
         <div class="card__wrapper">
+         <% @spots.each do |spot| %>
           <div class="card">
             <div class="card__body">
-              <h2 class="card__title">清水寺</h2>
+              <h2 class="card__title"><%= spot.name %></h2>
               <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
               <p class="card__summary">
-                タグが入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
+                <%= spot.text %>
               </p>
             </div>
           </div>
-          
-          <div class="card">
-            <div class="card__body">
-              <h2 class="card__title">清水寺</h2>
-              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
-              <p class="card__summary">
-                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
-              </p>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card__body">
-              <h2 class="card__title">清水寺</h2>
-              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
-              <p class="card__summary">
-                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
-              </p>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card__body">
-              <h2 class="card__title">清水寺</h2>
-              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
-              <p class="card__summary">
-                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
-              </p>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card__body">
-              <h2 class="card__title">清水寺</h2>
-              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
-              <p class="card__summary">
-                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
-              </p>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card__body">
-              <h2 class="card__title">清水寺</h2>
-              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
-              <p class="card__summary">
-                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
-              </p>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card__body">
-              <h2 class="card__title">清水寺</h2>
-              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
-              <p class="card__summary">
-                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
-              </p>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card__body">
-              <h2 class="card__title">清水寺</h2>
-              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
-              <p class="card__summary">
-                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
-              </p>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card__body">
-              <h2 class="card__title">清水寺</h2>
-              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
-              <p class="card__summary">
-                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
-              </p>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card__body">
-              <h2 class="card__title">清水寺</h2>
-              <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" />
-              <p class="card__summary">
-                記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。記事の要約が入ります。
-              </p>
-            </div>
-          </div>
-          
+          <% end %>
         </div>
+        
         <div class="inazuma">最初1234最後</div>
       </div>
     </main>
