画像の表示

--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -3,5 +3,6 @@
 
 <%= f.text_field :name, placeholder: "name" %>
 <%= f.text_area :text, placeholder: "text" %>
+<%= f.file_field :image, class: 'hidden' %>
 <%= f.submit "SEND" %>
 <% end %>
