--- a/app/views/tabinabi/index.html.erb
+++ b/app/views/tabinabi/index.html.erb
@@ -20,15 +20,15 @@
         <div class="card__wrapper">
          <% @spots.each do |spot| %>
           <div class="card">
-            <div class="card__body">
-              <h2 class="card__title"><%= spot.name %></h2>
-              <%= image_tag spot.image.variant(resize: '500x500'), class: 'card__img' %>
-              <%# <img src="/assets/Kiyomizu_Temple_-_01.jpg" alt="清水寺" class="card__img" /> %>
-              <p class="card__summary">
-                <%= spot.text %>
-                <%= link_to '詳細', spot_path(spot.id), method: :get %>
-              </p>
-            </div>
+            <%= link_to spot_path(spot.id), method: :get  do%>
+              <div class="card__body">
+                <h2 class="card__title"><%= spot.name %></h2>
+                <%= image_tag spot.image.variant(resize: '500x500'), class: 'card__img' %>
+                <p class="card__summary">
+                  <%= spot.text %>
+                </p>
+              </div>
+            <% end %>
           </div>
           <% end %>
         </div>
