--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -2,4 +2,4 @@
 <%= image_tag @spot.image %>
 <%= @spot.text%>
 
-<%= link_to '編集', edit_spot_path(spot.id), method: :get %>
+<%= link_to '編集', edit_spot_path(@spot.id), method: :get %>
