--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -3,4 +3,4 @@
 <%= @spot.text%>
 
 <%= link_to '編集', edit_spot_path(@spot.id), method: :get %>
-<%= link_to '削除', spot_path {spot.id}, method: :delete %>
+<%= link_to '削除', spot_path {@spot.id}, method: :delete %>
