--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
       <div class="device_body">
 
         <div class="device_body_left">
-          trip  navigation<br>new user
+          TRIP  NAVIGATION<br>NEW USER
         </div>
 
         <div class="device_body_right">
