text表示時改行適用

--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -36,7 +36,7 @@
 
       <div class="info_show">
         <h3>【詳細】</h3>
-        <%= @spot.text%>
+        <%= simple_format(@spot.text)%>
       </div>
 
       <div class="chat_show">
