topページの画像変更設定

--- a/app/views/tabinabi/index.html.erb
+++ b/app/views/tabinabi/index.html.erb
@@ -3,7 +3,9 @@
         <div class="top">
 
         <div class="top_screen">
-          <img src="/assets/tabinabitop.jpg" alt="清水寺" class="top_img">
+          <img src="/assets/tabinabitop.jpg" alt="清水寺" id="image-change1" class="top_img">
+          <img src="/assets/tabinabitop2.jpg" alt="清水寺" id="image-change2" class="top_img">
+          <img src="/assets/tabinabitop3.jpg" alt="清水寺" id="image-change3" class="top_img">
           <p class="top_name">旅nabi.</p>
         <div>
 
