--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -26,8 +26,8 @@
         </div>
         <div class="show_main_first_right">
           <div class="show_spot_name">
-            <h3>【ユーザー】：マルマルさんの投稿です</h3>
-            <h3>【エリア】：京都</h3>
+            <h3>【ユーザー】：<%= @spot.user.nickname %></h3>
+            <h3>【エリア】：<%= @spot.area.name %></h3>
             <h3>【タグ】</h3>
           </div>
           <div class="tag_space">
