Formオブジェクトを導入

--- a/app/views/spots/edit.html.erb
+++ b/app/views/spots/edit.html.erb
@@ -10,7 +10,7 @@
       <div class="new_spot_form_first">
         <div class="field">
           <%= f.label :観光地名【必須】 %><br />
-          <%= f.text_field :name, placeholder: "name" %>
+          <%= f.text_field :title, placeholder: "name" %>
         </div>
         <div class="field">
           <%= f.label :エリア【必須】 %><br />
