--- a/app/views/spots/edit.html.erb
+++ b/app/views/spots/edit.html.erb
@@ -35,8 +35,11 @@
           <%= f.file_field :image, class: 'hidden'%>
         </div>
         <div class="field">
-          タグ
-        </div>
+         
+          <%# <%= f.label :name, "タグ" %>
+          <%# <%= f.text_field :name, class:"input-tag" %> %> %>
+          
+        </div> 
       </div>
     </div>
     <% end %>
