逐次検索機能の実装

--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -36,7 +36,10 @@
         <div class="field">
           <%= f.label :name, "タグ" %>
           <%= f.text_field :name, class:"input-tag" %>
+          <div id="search-result">
+          </div>
         </div>
+
       </div>
     </div>
     <% end %>
