--- a/app/views/spots/edit.html.erb
+++ b/app/views/spots/edit.html.erb
@@ -32,7 +32,7 @@
       <div class="new_spot_form_therd">
         <div class="field">
           <%= f.label :画像【必須】 %><br />
-          <%= f.file_field :image, class: 'hidden'%>
+          <%= f.file_field :image %>
         </div>
         <div class="field">
          
