cardにマウスポイントを当てると色が変わる

--- a/app/assets/stylesheets/tabinabi-body.css
+++ b/app/assets/stylesheets/tabinabi-body.css
@@ -13,6 +13,7 @@
   width: calc((100% - 75px) / 2);
   margin-bottom: 40px;
   border: black double 3px;
+  /* background-color: blanchedalmond; */
 }
 
 .card__body {
