--- a/app/views/spots/edit.html.erb
+++ b/app/views/spots/edit.html.erb
@@ -37,7 +37,7 @@
         <div class="field">
          
           <%# <%= f.label :name, "タグ" %>
-          <%# <%= f.text_field :name, class:"input-tag" %> %> %>
+          <%# <%= f.text_field :name, class:"input-tag" %>
           
         </div> 
       </div>
