--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,15 +14,25 @@
     <header class="header">
       <div class="inner">
         <div class="main-header">
-          <%= link_to '旅navi.', root_path, class:"logo" %> 
-          <% if user_signed_in? %>
-            <a class="btn1"><%= link_to "観光地登録", new_spot_path %></a>
-            <a class="btn2"><%= link_to current_user.nickname, "/users/#{current_user.id}" %></a>
-            <a class="btn2"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></a>
-          <% else %>
-            <a class="btn1"><%= link_to "ログイン", new_user_session_path %></a>
-            <a class="btn2"><%= link_to "ユーザー新規", new_user_registration_path %></a>
-          <% end %>
+
+          <div class="main-header-left">
+            <%= link_to '旅navi.', root_path, class:"logo" %> 
+          </div>
+
+          <div class="main-header-right">
+            <% if user_signed_in? %>
+            <div class="user-list" id="lists"><%= current_user.nickname %></div>
+              
+              <ul class="show-lists hidden" id="pull-down">
+                <li class="pull-down-list"><%= link_to "観光地登録", new_spot_path %></li>
+                <li class="pull-down-list"><%= link_to current_user.nickname, "マイページ" %></li>
+                <li class="pull-down-list"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
+              </ul>
+            <% else %>
+              <a class="btn1"><%= link_to "ログイン", new_user_session_path %></a>
+              <a class="btn2"><%= link_to "ユーザー新規", new_user_registration_path %></a>
+            <% end %>
+          </div>
         </div>
       </div>
     </header>
