--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,5 +49,9 @@
       </div>
     </div>
     <%= yield %>
+
+    <footer class="footer">
+      <p class="copyright">RIKI SHIBATA make it.</p>
+    </footer>
   </body>
 </html>
