--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -24,7 +24,7 @@
       <div class="new_spot_form_second">
         <div class="field">
           <%= f.label :観光地説明【必須】 %><br />
-          <%= f.text_area :text, size: "90x17",value: "text" %>
+          <%= f.text_area :text, size: "90x17",value: @text %>
         </div>
       </div>
 
