--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -42,7 +42,9 @@
 
       <div class="info_show">
         <h3>【詳細】</h3>
-        <%= simple_format(@spot.text)%>
+        <div class="info_show_text">
+          <%= simple_format(@spot.text)%>
+        </div>
       </div>
 
       <div class="chat_show">
