--- a/app/assets/stylesheets/tabinabi-body.css
+++ b/app/assets/stylesheets/tabinabi-body.css
@@ -37,6 +37,23 @@
   font-size: 18px;
 }
 
+.card__tag {
+  margin-left: 3px;
+  margin-top: 10px;
+}
+.card__tag__title {
+  border-bottom: black solid 1px;
+  width: 180px;
+  text-align: center;
+}
+
+.card__tag__body {
+  padding-left: 5px;
+  width: 180px;
+  height: 110px;
+  overflow-y: scroll;
+}
+
 .top_img {
   width: 90%;
   height: 370px;
