--- a/app/assets/stylesheets/tabinabi-body.css
+++ b/app/assets/stylesheets/tabinabi-body.css
@@ -54,6 +54,17 @@
   overflow-y: scroll;
 }
 
+.card_tag_list{
+  border: orange solid 1px;
+  padding: 0 8px 0 3px;
+  width: fit-content;
+  margin-top: 10px;
+  border-radius: 0 30px 30px 0; 
+  font-size: 14px;
+  color: white;
+  background-color: tomato;
+}
+
 .top_img {
   width: 90%;
   height: 370px;
@@ -94,3 +105,4 @@
   display:none;
 
 }
+
