タグボタンにscriptを実装

--- a/app/views/spots/search_tag.html.erb
+++ b/app/views/spots/search_tag.html.erb
@@ -24,7 +24,7 @@
                     <div class="card__tag__title">#tag's</div>
                     <div class="card__tag__body">
                       <% spot.tags.each do |tag| %>
-                      <br>#<%=link_to tag.name, tag_spots_path(tag_id: tag.id) %>
+                      <br>#<%=link_to tag.name, tag_spots_path(tag_id: tag.id) ,class:"card_tag_list"%>
                       <%end%>
                     </div>
                   </div>
