--- a/app/views/tabinabi/index.html.erb
+++ b/app/views/tabinabi/index.html.erb
@@ -19,6 +19,13 @@
 
         
         <h1 class="page-heading">観光地一覧</h1>
+        <% if @spots.length == 0%>
+        <div class="nospot_sentens">
+        NO Spots<br>
+          観光地は登録されておりません<br>
+          観光地を登録しましょう
+        </div>
+        <% end %>
         <div class="card__wrapper">
          <% @spots.each do |spot| %>
           <div class="card" >
