--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
               
               <ul class="show-lists hidden" id="pull-down">
                 <li class="pull-down-list"><%= link_to "観光地登録", new_spot_path %></li>
-                <li class="pull-down-list"><%= link_to current_user.nickname, "マイページ" %></li>
+                <li class="pull-down-list"><%= link_to "マイページ", "/users/#{current_user.id}" %></li>
                 <li class="pull-down-list"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
               </ul>
             <% else %>
